# LichtFeld-Studio

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
eval/: default_optimization_params.json  mcmc_optimization_params.json
include/core/: camera.hpp  events.hpp  parameters.hpp
parameter/: default_optimization_params.json  mcmc_optimization_params.json
src/core/: argument_parser.cpp  camera.cpp  parameters.cpp  splat_data.cpp  splat_data_mirror.cpp  splat_data_transform.cpp
src/core/include/core/: event_bus.hpp  events.hpp  parameters.hpp  splat_data_transform.hpp
src/core/tensor/internal/: gpu_config.hpp  tensor_impl.hpp
src/io/: cache_image_loader.cpp  nvcodec_image_loader.cpp  pipelined_image_loader.cpp
src/io/formats/: ply.cpp  transforms.cpp
src/loader/formats/: colmap.cpp  transforms.cpp
src/loader/loaders/: blender_loader.cpp
src/rendering/: CMakeLists.txt  cuda_gl_interop.cpp  cuda_gl_interop.hpp  ellipsoid_renderer.cpp  ellipsoid_renderer.hpp  gl_state_guard.hpp  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp
src/rendering/include/rendering/: rendering.hpp
src/rendering/rasterizer/rasterization/include/: forward.h  kernels_forward.cuh  rasterization_api_tensor.h  rasterization_config.h
src/rendering/rasterizer/rasterization/src/: forward.cu  rasterization_api_tensor.cu
src/rendering/resources/shaders/: ellipsoid.frag  ellipsoid.vert
src/training/: dataset.hpp  trainer.cpp  trainer.hpp
src/training/kernels/: ssim.cu
src/training/metrics/: metrics.cpp
src/training/rasterization/: fast_rasterizer.hpp  gsplat_rasterizer.cpp
src/training/rasterization/fastgs/rasterization/include/: rasterization_api.h  rasterization_config.h
src/training/strategies/: default_strategy.cpp  mcmc.cpp  strategy_utils.cpp  strategy_utils.hpp
src/visualizer/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer/command/commands/: ellipsoid_command.cpp  ellipsoid_command.hpp
src/visualizer/core/: editor_context.cpp  editor_context.hpp
src/visualizer/gui/: gui_manager.cpp  gui_manager.hpp  string_keys.hpp  ui_widgets.cpp  ui_widgets.hpp
src/visualizer/gui/panels/: ellipsoid_panel.cpp  ellipsoid_panel.hpp  gizmo_toolbar.cpp  gizmo_toolbar.hpp  menu_bar.cpp  menu_bar.hpp  scene_panel.cpp  scene_panel.hpp  tools_panel.cpp  training_panel.cpp
src/visualizer/gui/resources/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  zh.json
src/visualizer/gui/utils/: file_dialogs.cpp  file_dialogs.hpp  windows_utils.cpp  windows_utils.hpp
src/visualizer/gui/windows/: image_preview.cpp  image_preview.hpp
src/visualizer/input/: input_controller.cpp
src/visualizer/rendering/: rendering_manager.cpp  rendering_manager.hpp
src/visualizer/scene/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/visualizer/tools/: selection_tool.cpp  selection_tool.hpp  tool_base.hpp
src/visualizer/training/: training_manager.cpp
tests/: test_fused_l1_ssim.cpp  test_unicode_paths_windows.cpp  test_vram_resize.cpp
